--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
