--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
+    "vue-intersection-observer": "^0.1.8",
     "vue-router": "^3.2.0",
     "vue-svg-loader": "^0.16.0"
   },
