--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "portfolio",
+  "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://adi-peled.github.io/my-portfolio",
   "scripts": {
     "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
