--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "node-sass": "^4.12.0",
+    "sass": "^1.32.0",
     "register-service-worker": "^1.7.1",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.0.0",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-intersection-observer": "^0.1.8",
